--- a/shortcodes.html
+++ b/shortcodes.html
@@ -235,6 +235,9 @@
 <footer class="footer">
 	Created by using <a href="http://stas-melnikov.ru/responsive_elements/" class="link" target="blank">Responsive Framework</a>
 	<p class="author"><a href="https://www.linkedin.com/in/melnik909" class="link" target="blank">Developed by Stas Melnikov</a></p>
+	<div class="social" style="float: right;">
+		<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,moimir,gplus" data-yashareTheme="counter"></div>
+	</div>
 </footer>
 <div id="collapse" class="full_menu">
 	<span id="close_menu">+</span>
@@ -298,6 +301,6 @@
 	
 	window.addEventListener( 'load', Remove_Preloader, false );
 </script>
-
+<script async type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script>
 </body>
 </html>
