--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 					<a href="#contacts" class="menu_link scroller_link">Contacts<span class="line_bottom">&nbsp;</span></a>
 				</li>
 				<li class="menu_item">
-					<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="menu_link">Responsive Framework<span class="line_bottom">&nbsp;</span></a>
+					<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="menu_link">Responsive<br> Framework<span class="line_bottom">&nbsp;</span></a>
 				</li>
 				<li class="menu_item">
-					<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="menu_link">Layered responsive modal window<span class="line_bottom">&nbsp;</span></a>
+					<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="menu_link">Layered responsive<br> modal window<span class="line_bottom">&nbsp;</span></a>
 				</li>
 				<li class="menu_item">
-					<a href="doc/index.html" class="menu_link">Documentation<span class="line_bottom">&nbsp;</span></a>
+					<a href="doc/index.html" class="menu_link">Doc<span class="line_bottom">&nbsp;</span></a>
 				</li>
 				<li class="menu_item wrapper_drop_down_block">
 					<a href="#" class="menu_link">Pages</a>
@@ -102,6 +102,7 @@
 			the responsive grid, responsive accordion, responsive tabs and many other components are included. It is prepared documentation is qualitative,
 			which will help you to use it.
 		</p>
+		<p class="paragraph">Source: <a href="https://github.com/melnik909/responsive-UX-theme" class="link">https://github.com/melnik909/responsive-UX-theme</a></p>
 		<article class="main_container_item">
 			<a href="http://stas-melnikov.ru/responsive_elements/grid.html" target="blank" class="hover_circle">
 				<img class="img_post" src="images/designer.jpg" alt="designer" />
@@ -569,7 +570,7 @@
 </div>
 <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDEN_8Sph4q9GwhWKKnsOP5bl4Frwyo3aM&amp;sensor=false&amp;extension=.js'></script> 
 <script async src="js/map.js"></script>
-<script src="js/min/fullslider.min.js"></script>
+<script async src="js/min/fullslider.min.js"></script>
 <script src="js/jquery.js"></script>
 <script async src="js/min/filter.min.js"></script>
 <script async src="js/min/full_menu.min.js"></script>
@@ -583,6 +584,7 @@
 	
 	window.addEventListener( 'load', Remove_Preloader, false );
 </script>
+
 <script async type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script>
 </body>
 </html>
