--- a/portfolio4.html
+++ b/portfolio4.html
@@ -32,13 +32,13 @@
 						<a href="index.html#contacts" class="menu_link">Contacts<span class="line_bottom">&nbsp;</span></a>
 					</li>
 					<li class="menu_item">
-						<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="menu_link">Responsive Framework<span class="line_bottom">&nbsp;</span></a>
+						<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="menu_link">Responsive<br> Framework<span class="line_bottom">&nbsp;</span></a>
 					</li>
 					<li class="menu_item">
-						<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="menu_link">Layered responsive modal window<span class="line_bottom">&nbsp;</span></a>
+						<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="menu_link">Layered responsive<br> modal window<span class="line_bottom">&nbsp;</span></a>
 					</li>
 					<li class="menu_item">
-						<a href="doc/index.html" class="menu_link">Documentation<span class="line_bottom">&nbsp;</span></a>
+						<a href="doc/index.html" class="menu_link">Doc<span class="line_bottom">&nbsp;</span></a>
 					</li>	
 					<li class="menu_item wrapper_drop_down_block">
 						<a href="#" class="menu_link">Pages</a>
@@ -180,5 +180,6 @@
 	window.addEventListener( 'load', Remove_Preloader, false );
 </script>
 <script async type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script>
+<script>window.addEventListener('load', init_ga);function init_ga(){var script = document.createElement("script");script.src = "ga.js";script.async = true;document.body.appendChild(script);}</script>
 </body>
 </html>
