--- a/portfolio3.html
+++ b/portfolio3.html
@@ -118,6 +118,13 @@
 <footer class="footer">
 	Created by using <a href="http://stas-melnikov.ru/responsive_elements/" class="link" target="blank">Responsive Framework</a>
 	<p class="author"><a href="https://www.linkedin.com/in/melnik909" class="link" target="blank">Developed by Stas Melnikov</a></p>
+	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="float: right;">
+		<input type="hidden" name="cmd" value="_s-xclick">
+		<input type="hidden" name="hosted_button_id" value="NN4W5TKX2S4AW">
+		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+		<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1">
+	</form>
+
 	<div class="social" style="float: right;">
 		<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,moimir,gplus" data-yashareTheme="counter"></div>
 	</div>
