--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="Stas Melnikov" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
-<style>.paragraph .button{  padding: 10px 0;text-align: center;margin: 0 auto}</style>
+<style>.paragraph .button{  padding: 10px 0;text-align: center;margin: 0 auto}.footer_left_column{float: left;width: 310px;}.footer_right_column{float: right;text-align: right;width:310px}.social{margin-top: 10px;}</style>
 </head>
 <body class="active_preloader">
 <div class="background_preloader"><div class="wrapper_preloader"><div class="preloader left_round"></div><div class="preloader right_round"></div></div></div>
@@ -105,32 +105,32 @@
 		</p>
 		<p class="paragraph"><a href="https://github.com/melnik909/responsive-UX-theme" class="button">download</a></p>
 		<article class="main_container_item">
-			<a href="http://stas-melnikov.ru/responsive_elements/grid.html" target="blank" class="hover_circle">
-				<img class="img_post" src="http://stas-melnikov.ru/themes/responsive_ux_template/images/designer.jpg" alt="designer" />
+			<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="hover_circle">
+				<img class="img_production img_post" src="http://stas-melnikov.ru/item_preview_rw.jpg" alt="Responsive modal window" />
 				<div class="wrapper_circle">
 					<div class="circle">
-						<span class="circle_item">Responsive grid</span>
+						<span class="circle_item">Responsive modal window</span>
 					</div>
 				</div>
 			</a>
-			<h3 class="title_post">Responsive grid</h3>
-			<p class="paragraph">Responsive grid will help you easily and simply to build structure of your site.</p>
+			<h3 class="title_post">Responsive modal window</h3>
+			<p class="paragraph">We decided to create a unique component for modal dialogs! The result surprised us! Turned out so beautiful, interesting window. Now you can create the same. The only thing that can you can </p>
 		</article>
 		<article class="main_container_item">
-			<a href="http://stas-melnikov.ru/responsive_elements/tabs.html" target="blank" class="hover_circle">
-				<img class="img_post" src="http://stas-melnikov.ru/themes/responsive_ux_template/images/frontenddev.jpg" alt="frontenddev" />
+			<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="hover_circle">
+				<img class="img_production img_post" src="http://stas-melnikov.ru/item_preview_wg.jpg" alt="WebGL Generator of Models" />
 				<div class="wrapper_circle">
 					<div class="circle">
-						<span class="circle_item">Responsive tabs</span>
+						<span class="circle_item">WebGL Generator of Models</span>
 					</div>
 				</div>
 			</a>
-			<h3 class="title_post">Responsive tabs</h3>
-			<p class="paragraph">Responsive tabs will help you conveniently and compactly to place big volume of information.</p>
+			<h3 class="title_post">WebGL Generator of Models</h3>
+			<p class="paragraph">WebGl generator is a component for creating original 3D models. You can use it to demonstrate various products and other things. </p>
 		</article>
 		<article class="main_container_item">
 			<a href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559" target="blank" class="hover_circle" id="hover_left_circle">
-				<img class="img_post" src="http://stas-melnikov.ru/themes/responsive_ux_template/images/seo.jpg" alt="seo" />
+				<img class="img_production img_post" src="http://stas-melnikov.ru/item_preview_panorama.jpg" alt="3d Panorams" />
 				<div class="wrapper_circle">
 					<div class="circle">
 						<span class="circle_item">3d Panorams</span>
@@ -138,7 +138,7 @@
 				</div>
 			</a>
 			<h3 class="title_post">3d Panorams</h3>
-			<p class="paragraph">Using 3d Panorams your projects will look better.</p>
+			<p class="paragraph">Script for create 3d Panorams using libraries Three.js. You can create your panoramas simply load their textures. Nothing more. You can control the model with your finger.</p>
 		</article>
 		<div class="skills">
 			<h3 class="title">Skills</h3>
@@ -204,17 +204,22 @@
 	<div id="map"></div>
 </div>
 <footer class="footer">
+	<div class="footer_left_column">
 	Created by using <a href="http://stas-melnikov.ru/responsive_elements/" class="link" target="blank">Responsive Framework</a>
+		<p>Donate 1 dollar, please</p>
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="margin: 10px 0;">
+			
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="NN4W5TKX2S4AW">
+			<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+			<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1">
+		</form>
+	</div>
+	<div class="footer_right_column">
 	<p class="author"><a href="https://www.linkedin.com/in/melnik909" class="link" target="blank">Developed by Stas Melnikov</a></p>
-	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="float: right;">
-		<input type="hidden" name="cmd" value="_s-xclick">
-		<input type="hidden" name="hosted_button_id" value="NN4W5TKX2S4AW">
-		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-		<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1">
-	</form>
-
-	<div class="social" style="float: right;">
-		<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,moimir,gplus" data-yashareTheme="counter"></div>
+		<div class="social">
+			<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,moimir,gplus" data-yashareTheme="counter"></div>
+		</div>
 	</div>
 </footer>
 <div id="collapse" class="full_menu">
