--- a/index.html
+++ b/index.html
@@ -31,12 +31,6 @@
 					<a href="#contacts" class="menu_link scroller_link">Contacts<span class="line_bottom">&nbsp;</span></a>
 				</li>
 				<li class="menu_item">
-					<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="menu_link">Responsive<br> Framework<span class="line_bottom">&nbsp;</span></a>
-				</li>
-				<li class="menu_item">
-					<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="menu_link">Layered responsive<br> modal window<span class="line_bottom">&nbsp;</span></a>
-				</li>
-				<li class="menu_item">
 					<a href="doc/index.html" class="menu_link">Doc<span class="line_bottom">&nbsp;</span></a>
 				</li>
 				<li class="menu_item wrapper_drop_down_block">
@@ -170,6 +164,12 @@
 			<div class="main_container_item">
 				<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_wg.jpg" alt="img" /></a>
 			</div>
+			<div class="main_container_item">
+				<a href="http://stas-melnikov.ru/preloaders/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_preloaders.jpg" alt="img" /></a>
+			</div>
+			<div class="main_container_item">
+				<a href="http://stas-melnikov.ru/material_bootstrap_theme/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_bootstrap.jpg" alt="img" /></a>
+			</div>
 	</section>
 	<section id="feedback" class="wrapper_form">
 		<h2 class="title">Feedback</h2>
@@ -236,12 +236,6 @@
 		</li>
 		<li class="additional_menu_item">
 			<a href="#contacts" class="additional_menu_link scroller_link">Contacts</a>
-		</li>
-		<li class="additional_menu_item">
-			<a href="http://stas-melnikov.ru/responsive_elements/" class="menu_link" target="blank">Responsive Framework</a>
-		</li>
-		<li class="additional_menu_item">
-			<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" class="menu_link" target="blank">Layered responsive modal window</a>
 		</li>
 		<li class="additional_menu_item">
 			<a href="doc/index.html" class="menu_link">Documentation</a>
