--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
 			<div class="main_container_item">
 				<a href="http://stas-melnikov.ru/material_bootstrap_theme/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_bootstrap.jpg" alt="img" /></a>
 			</div>
+			<div class="main_container_item">
+				<a href="http://stas-melnikov.ru/material_table/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_rt.jpg" alt="img" /></a>
+			</div>
 	</section>
 	<section id="feedback" class="wrapper_form">
 		<h2 class="title">Feedback</h2>
