--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
 <style>.paragraph .button{  padding: 10px 0;text-align: center;margin: 0 auto}.footer_left_column{float: left;width: 310px;}.footer_right_column{float: right;text-align: right;width:310px}.social{margin-top: 10px;}</style>
+<!--plugins css-->
+<style>
+.main_container_plugins {margin: 0 auto;padding: 35px 20px 0;text-align: center;min-width: 100px;max-width: 1200px;}.main_container_plugins  .main_container_item {width: 100px;padding: 1%;display: inline-block;line-height: 25px;vertical-align: top;}.main_container_plugins.columns3 .main_container_item {width: 30%;margin: 0 5px 20px;}.main_container_plugins  .img_post {height: auto; max-width: 100%; border: 9px solid #eee;}@media screen and (max-width: 640px){.main_container_plugins.columns3 .main_container_item { width: 90%;}}
+</style>
 </head>
 <body class="active_preloader">
 <div class="background_preloader"><div class="wrapper_preloader"><div class="preloader left_round"></div><div class="preloader right_round"></div></div></div>
@@ -47,7 +51,7 @@
 						<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="portfolio4.html">4 Columns</a></li>
 						<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="dynamic_portfolio.html">Dynamic portfolio</a></li>
 						<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="project.html">Single Project</a></li>
-						<li class="drop_down_menu_item"><a class="drop_down_menu_link" target="blank"  href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559">3d Single Project</a></li>
+						<li class="drop_down_menu_item"><a class="drop_down_menu_link" target="blank"  href="http://stas-melnikov.ru/3d_panorama//">3d Single Project</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -123,7 +127,7 @@
 			<p class="paragraph">WebGl generator is a component for creating original 3D models. You can use it to demonstrate various products and other things. </p>
 		</article>
 		<article class="main_container_item">
-			<a href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559" target="blank" class="hover_circle" id="hover_left_circle">
+			<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="hover_circle" id="hover_left_circle">
 				<img class="img_production img_post" src="http://stas-melnikov.ru/item_preview_panorama.jpg" alt="3d Panorams" />
 				<div class="wrapper_circle">
 					<div class="circle">
@@ -150,7 +154,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="works_portfolio" class="columns3">
+	<section class="main_container_plugins columns3">
 		<h2 class="title">Works</h2>
 			<div class="main_container_item">
 				<a href="http://stas-melnikov.ru/layered_responsive_modal_window/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_rw.jpg" alt="img" /></a>
@@ -159,7 +163,7 @@
 				<a href="http://stas-melnikov.ru/responsive_elements/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_rf.jpg" alt="img" /></a>
 			</div>
 			<div class="main_container_item">
-				<a href="http://codecanyon.net/item/3d-panoramas/8417559"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_panorama.jpg" alt="img" /></a>
+				<a href="http://stas-melnikov.ru/3d_panorama//"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_panorama.jpg" alt="img" /></a>
 			</div>
 			<div class="main_container_item">
 				<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_wg.jpg" alt="img" /></a>
@@ -265,7 +269,7 @@
 			<a href="project.html" class="menu_link">Single Project</a>
 		</li>
 		<li class="additional_menu_item">
-			<a href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559" target="blank" class="menu_link">3d Single Project</a>
+			<a href="http://stas-melnikov.ru/3d_panorama//" target="blank" class="menu_link">3d Single Project</a>
 		</li>
 	</ul>
 </div>
