--- a/portfolio3.html
+++ b/portfolio3.html
@@ -48,7 +48,7 @@
 							<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="portfolio4.html">4 Columns</a></li>
 							<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="dynamic_portfolio.html">Dynamic portfolio</a></li>
 							<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="project.html">Single Project</a></li>
-							<li class="drop_down_menu_item"><a class="drop_down_menu_link" target="blank"  href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559">3d Single Project</a></li>
+							<li class="drop_down_menu_item"><a class="drop_down_menu_link" target="blank"  href="http://stas-melnikov.ru/3d_panorama//">3d Single Project</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -150,7 +150,7 @@
 			<a href="project.html" class="menu_link">Single Project</a>
 		</li>
 		<li class="additional_menu_item">
-			<a href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559" target="blank" class="menu_link">3d Single Project</a>
+			<a href="http://stas-melnikov.ru/3d_panorama//" target="blank" class="menu_link">3d Single Project</a>
 		</li>
 	</ul>
 </div>
