--- a/project.html
+++ b/project.html
@@ -48,7 +48,7 @@
 							<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="portfolio4.html">4 Columns</a></li>
 							<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="dynamic_portfolio.html">Dynamic portfolio</a></li>
 							<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="project.html">Single Project</a></li>
-							<li class="drop_down_menu_item"><a class="drop_down_menu_link" target="blank"  href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559">3d Single Project</a></li>
+							<li class="drop_down_menu_item"><a class="drop_down_menu_link" target="blank"  href="http://stas-melnikov.ru/3d_panorama/">3d Single Project</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -68,7 +68,7 @@
 			<div class="right_column">
 				<div class="info_box">
 					<p class="paragraph">Take a look at 3D view of our product. You will be surprized how it looks like.</p>
-					<a href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559" target="blank" class="button middle_button">See project</a>
+					<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="button middle_button">See project</a>
 				</div>
 			</div>
 		</div>
@@ -167,7 +167,7 @@
 			<a href="project.html" class="menu_link">Single Project</a>
 		</li>
 		<li class="additional_menu_item">
-			<a href="http://codecanyon.net/item/3d-panoramas/full_screen_preview/8417559" target="blank" class="menu_link">3d Single Project</a>
+			<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="menu_link">3d Single Project</a>
 		</li>
 	</ul>
 </div>
