--- a/project.html
+++ b/project.html
@@ -127,8 +127,13 @@
 	</div>
 </div>
 <footer class="footer">
-	Created by using <a href="http://stas-melnikov.ru/responsive_elements/" class="link" target="blank">Responsive Framework</a>
-	<p class="author"><a href="https://www.linkedin.com/in/melnik909" class="link" target="blank">Developed by Stas Melnikov</a></p>
+	<a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=a3eCO3_tbrOTsh3N238QwzPg2nf1oJ100lZnv_BLdzH8-vKjDFOiKdRwbIK&dispatch=5885d80a13c0db1f8e263663d3faee8d96f000117187ac9edec8a65b311f447e" style="display: block;float: left; margin: 0 15px 10px 0;padding: 8px 15px; border:1px solid #fff; color: #fff;border-radius: 5px;">Donate</a>
+	<div class="social footer_left_column">
+		<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="facebook,twitter,gplus" data-yashareTheme="counter"></div>
+	</div>
+	<div class="footer_right_column">
+		<a href="https://www.linkedin.com/in/melnik909" class="link" target="blank">Developed by Stas Melnikov</a>
+	</div>
 </footer>
 <div id="collapse" class="full_menu">
 	<span id="close_menu">+</span>
@@ -181,6 +186,5 @@
 	
 	window.addEventListener( 'load', Remove_Preloader, false );
 </script>
-<script>window.addEventListener('load', init_ga);function init_ga(){var script = document.createElement("script");script.src = "ga.js";script.async = true;document.body.appendChild(script);}</script>
 </body>
 </html>
