--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="Stas Melnikov" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
-<style>.paragraph .button{  padding: 10px 0;text-align: center;margin: 0 auto}.footer_left_column{float: left;width: 310px;}.footer_right_column{float: right;text-align: right;width:310px}.social{margin-top: 10px;}</style>
+
 <!--plugins css-->
 <style>
 .main_container_plugins {margin: 0 auto;padding: 35px 20px 0;text-align: center;min-width: 100px;max-width: 1200px;}.main_container_plugins  .main_container_item {width: 100px;padding: 1%;display: inline-block;line-height: 25px;vertical-align: top;}.main_container_plugins.columns3 .main_container_item {width: 30%;margin: 0 5px 20px;}.main_container_plugins  .img_post {height: auto; max-width: 100%; border: 9px solid #eee;}@media screen and (max-width: 640px){.main_container_plugins.columns3 .main_container_item { width: 90%;}}
@@ -101,7 +101,6 @@
 			the responsive grid, responsive accordion, responsive tabs and many other components are included. It is prepared documentation is qualitative,
 			which will help you to use it.
 		</p>
-		<p class="paragraph"><a href="https://github.com/melnik909/responsive-UX-theme" class="button">download</a></p>
 		<article class="main_container_item">
 			<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="hover_circle">
 				<img class="img_production img_post" src="http://stas-melnikov.ru/item_preview_rw.jpg" alt="Responsive modal window" />
@@ -207,29 +206,17 @@
 <div id="contacts" class="contacts">
 	<section class="contacts_item">
 		<h3 class="title">Address:</h3>
-		<p class="paragraph">University of Texas at Arlington 701 South Nedderman Drive Arlington, TX, 76019</p>
-		<h3 class="title">Phone:</h3>
-		<p class="paragraph">817-272-2011</p>
+		<p class="paragraph">DevLab Pro, Russian Federation, Penza, Karla Marks 16</p>
 	</section>
 	<div id="map"></div>
 </div>
 <footer class="footer">
-	<div class="footer_left_column">
-	Created by using <a href="http://stas-melnikov.ru/responsive_elements/" class="link" target="blank">Responsive Framework</a>
-		<p>Donate 1 dollar, please</p>
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="margin: 10px 0;">
-			
-			<input type="hidden" name="cmd" value="_s-xclick">
-			<input type="hidden" name="hosted_button_id" value="NN4W5TKX2S4AW">
-			<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-			<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1">
-		</form>
+	<a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=a3eCO3_tbrOTsh3N238QwzPg2nf1oJ100lZnv_BLdzH8-vKjDFOiKdRwbIK&dispatch=5885d80a13c0db1f8e263663d3faee8d96f000117187ac9edec8a65b311f447e" style="display: block;float: left; margin: 0 15px 10px 0;padding: 8px 15px; border:1px solid #fff; color: #fff;border-radius: 5px;">Donate</a>
+	<div class="social footer_left_column">
+		<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="facebook,twitter,gplus" data-yashareTheme="counter"></div>
 	</div>
 	<div class="footer_right_column">
-	<p class="author"><a href="https://www.linkedin.com/in/melnik909" class="link" target="blank">Developed by Stas Melnikov</a></p>
-		<div class="social">
-			<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,moimir,gplus" data-yashareTheme="counter"></div>
-		</div>
+		<a href="https://www.linkedin.com/in/melnik909" class="link" target="blank">Developed by Stas Melnikov</a>
 	</div>
 </footer>
 <div id="collapse" class="full_menu">
@@ -273,8 +260,6 @@
 		</li>
 	</ul>
 </div>
-<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDEN_8Sph4q9GwhWKKnsOP5bl4Frwyo3aM&amp;sensor=false&amp;extension=.js'></script> 
-<script async src="js/map.js"></script>
 <script async src="js/min/fullslider.min.js"></script>
 <script src="js/jquery.js"></script>
 <script async src="js/min/filter.min.js"></script>
@@ -289,7 +274,74 @@
 	
 	window.addEventListener( 'load', Remove_Preloader, false );
 </script>
+<script>
+(function(){
 
-<script async type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script>
+	var scripts = [
+		{
+			src: "//yastatic.net/share/share.js",
+			async: true,
+		}
+	],
+	
+	scripts_len = scripts.length;
+
+	
+	window.addEventListener('load', init(scripts));
+
+	
+	function init(scripts){
+		var script;
+		setTimeout(function(){
+			if(window.outerWidth > 640){
+
+				for(var i = 0; i < scripts_len; i++){
+					script = document.createElement("script");
+					script.src = scripts[i].src;
+					script.async = scripts[i].async;
+					document.body.appendChild(script);
+				}
+				
+			}
+		},600);
+	}
+})();
+</script> 
+<script>
+(function(){
+
+	window.addEventListener('load', init_ga);
+	window.addEventListener( 'resize', init_ga);
+	var flag_map = true;
+
+	function init_ga(){
+		if((window.outerWidth > 640) && (flag_map)){
+			var script = document.createElement("script");
+			script.src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyDEN_8Sph4q9GwhWKKnsOP5bl4Frwyo3aM&amp;sensor=false&callback=initMap";
+			script.async = true;
+			document.body.appendChild(script);
+			flag_map = false;
+		}
+	}
+})();
+function initMap() {
+	var mapCanvas = document.getElementById('map');
+	var mapOptions = {
+	  center: new google.maps.LatLng(53.186162, 45.00961),
+	  zoom: 17,
+	  mapTypeId: google.maps.MapTypeId.roadmap,
+	  scrollwheel: false,
+	  scaleControl: false,
+			}
+	
+	var map = new google.maps.Map(mapCanvas, mapOptions),
+		marker = new google.maps.Marker({
+		position: new google.maps.LatLng(53.186162, 45.00961),
+		map: map,
+		icon: '/templates/devlab/images/marker.png',
+		});
+	google.maps.event.addDomListener(window, 'load', initMap);
+}
+</script>
 </body>
 </html>
