--- a/portfolio3.html
+++ b/portfolio3.html
@@ -110,7 +110,11 @@
 	</div>
 </div>
 <footer class="footer">
-	<a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=a3eCO3_tbrOTsh3N238QwzPg2nf1oJ100lZnv_BLdzH8-vKjDFOiKdRwbIK&dispatch=5885d80a13c0db1f8e263663d3faee8d96f000117187ac9edec8a65b311f447e" style="display: block;float: left; margin: 0 15px 10px 0;padding: 8px 15px; border:1px solid #fff; color: #fff;border-radius: 5px;">Donate</a>
+	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		<input type="hidden" name="cmd" value="_s-xclick">
+		<input type="hidden" name="hosted_button_id" value="NN4W5TKX2S4AW">
+		<button style="display: block;float: left; margin: 0 15px 10px 0;padding: 8px 15px; border:1px solid #fff; color: #fff;border-radius: 5px;cursor: pointer;background-color: rgba(0,0,0,0)">Donate</button>
+	</form>
 	<div class="social footer_left_column">
 		<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="facebook,twitter,gplus" data-yashareTheme="counter"></div>
 	</div>
