--- a/portfolio3.html
+++ b/portfolio3.html
@@ -34,6 +34,9 @@
 					<li class="menu_item">
 						<a href="doc/index.html" class="menu_link">Doc<span class="line_bottom">&nbsp;</span></a>
 					</li>
+					<li class="menu_item">
+						<a href="https://github.com/melnik909/responsive-UX-theme" class="menu_link">GitHub<span class="line_bottom">&nbsp;</span></a>
+					</li>
 					<li class="menu_item wrapper_drop_down_block">
 						<a href="#" class="menu_link">Pages</a>
 						<ul class="drop_down_block">
