--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <!--plugins css-->
 <style>
-.main_container_plugins {margin: 0 auto;padding: 35px 20px 0;text-align: center;min-width: 100px;max-width: 1200px;}.main_container_plugins  .main_container_item {width: 100px;padding: 1%;display: inline-block;line-height: 25px;vertical-align: top;}.main_container_plugins.columns3 .main_container_item {width: 30%;margin: 0 5px 20px;}.main_container_plugins  .img_post {height: auto; max-width: 100%; border: 9px solid #eee;}@media screen and (max-width: 640px){.main_container_plugins.columns3 .main_container_item { width: 90%;}}
+.js {background-color: #40c95d;}.css {background-color: #36bae2;}.html{background-color: #d7d93f;}.project_item {color: #fff;font-size: 18px;position: absolute;top: 50%;left: 50%;-webkit-transform: translateZ(0) translate(-50%, -50%);-ms-transform: translateZ(0) translate(-50%, -50%);transform: translateZ(0) translate(-50%, -50%);}
+.main_container_plugins {margin: 0 auto;padding: 35px 20px 0;text-align: center;min-width: 100px;max-width: 1200px;}.main_container_plugins  .main_container_item {width: 100px;padding: 1%;height: 250px;position: relative;display: inline-block;line-height: 25px;vertical-align: top;}.main_container_plugins.columns3 .main_container_item {width: 30%;margin: 0 5px 20px;}.main_container_plugins  .img_post {height: auto; max-width: 100%; border: 9px solid #eee;}@media screen and (max-width: 640px){.main_container_plugins.columns3 .main_container_item { width: 90%;}}
 </style>
 </head>
 <body class="active_preloader">
@@ -37,6 +38,9 @@
 				<li class="menu_item">
 					<a href="doc/index.html" class="menu_link">Doc<span class="line_bottom">&nbsp;</span></a>
 				</li>
+				<li class="menu_item">
+					<a href="https://github.com/melnik909/responsive-UX-theme" class="menu_link">GitHub<span class="line_bottom">&nbsp;</span></a>
+				</li>
 				<li class="menu_item wrapper_drop_down_block">
 					<a href="#" class="menu_link">Pages</a>
 					<ul class="drop_down_block">
@@ -51,7 +55,7 @@
 						<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="portfolio4.html">4 Columns</a></li>
 						<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="dynamic_portfolio.html">Dynamic portfolio</a></li>
 						<li class="drop_down_menu_item"><a class="drop_down_menu_link" href="project.html">Single Project</a></li>
-						<li class="drop_down_menu_item"><a class="drop_down_menu_link" target="blank"  href="http://stas-melnikov.ru/3d_panorama//">3d Single Project</a></li>
+						<li class="drop_down_menu_item"><a class="drop_down_menu_link" target="blank"  href="http://stas-melnikov.ru/3d_panorama/">3d Single Project</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -101,44 +105,7 @@
 			the responsive grid, responsive accordion, responsive tabs and many other components are included. It is prepared documentation is qualitative,
 			which will help you to use it.
 		</p>
-		<article class="main_container_item">
-			<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="hover_circle">
-				<img class="img_production img_post" src="http://stas-melnikov.ru/item_preview_rw.jpg" alt="Responsive modal window" />
-				<div class="wrapper_circle">
-					<div class="circle">
-						<span class="circle_item">Responsive modal window</span>
-					</div>
-				</div>
-			</a>
-			<h3 class="title_post">Responsive modal window</h3>
-			<p class="paragraph">We decided to create a unique component for modal dialogs! The result surprised us! Turned out so beautiful, interesting window. Now you can create the same. The only thing that can you can </p>
-		</article>
-		<article class="main_container_item">
-			<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="hover_circle">
-				<img class="img_production img_post" src="http://stas-melnikov.ru/item_preview_wg.jpg" alt="WebGL Generator of Models" />
-				<div class="wrapper_circle">
-					<div class="circle">
-						<span class="circle_item">WebGL Generator of Models</span>
-					</div>
-				</div>
-			</a>
-			<h3 class="title_post">WebGL Generator of Models</h3>
-			<p class="paragraph">WebGl generator is a component for creating original 3D models. You can use it to demonstrate various products and other things. </p>
-		</article>
-		<article class="main_container_item">
-			<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="hover_circle" id="hover_left_circle">
-				<img class="img_production img_post" src="http://stas-melnikov.ru/item_preview_panorama.jpg" alt="3d Panorams" />
-				<div class="wrapper_circle">
-					<div class="circle">
-						<span class="circle_item">3d Panorams</span>
-					</div>
-				</div>
-			</a>
-			<h3 class="title_post">3d Panorams</h3>
-			<p class="paragraph">Script for create 3d Panorams using libraries Three.js. You can create your panoramas simply load their textures. Nothing more. You can control the model with your finger.</p>
-		</article>
 		<div class="skills">
-			<h3 class="title">Skills</h3>
 			<div class="skills_item">
 				<div class="skill">HTML5/CSS3/JS</div>
 				<div class="value blue"></div>
@@ -148,37 +115,43 @@
 				<div class="value green"></div>
 			</div>
 			<div class="skills_item">
-				<div class="skill">PHP/Ruby/Python</div>
+				<div class="skill">Mobile</div>
 				<div class="value yellow"></div>
 			</div>
 		</div>
 	</section>
 	<section class="main_container_plugins columns3">
 		<h2 class="title">Works</h2>
-			<div class="main_container_item">
-				<a href="http://stas-melnikov.ru/layered_responsive_modal_window/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_rw.jpg" alt="img" /></a>
-			</div>
-			<div class="main_container_item">
-				<a href="http://stas-melnikov.ru/responsive_elements/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_rf.jpg" alt="img" /></a>
-			</div>
-			<div class="main_container_item">
-				<a href="http://stas-melnikov.ru/3d_panorama//"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_panorama.jpg" alt="img" /></a>
-			</div>
-			<div class="main_container_item">
-				<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_wg.jpg" alt="img" /></a>
-			</div>
-			<div class="main_container_item">
-				<a href="http://stas-melnikov.ru/preloaders/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_preloaders.jpg" alt="img" /></a>
-			</div>
-			<div class="main_container_item">
-				<a href="http://stas-melnikov.ru/material_bootstrap_theme/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_bootstrap.jpg" alt="img" /></a>
-			</div>
-			<div class="main_container_item">
-				<a href="http://stas-melnikov.ru/material_table/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_rt.jpg" alt="img" /></a>
-			</div>
-			<div class="main_container_item">
-				<a href="http://stas-melnikov.ru/library-of-plugins/"><img class="img_production img_post"  src="http://stas-melnikov.ru/item_preview_collection.jpg" alt="img" /></a>
-			</div>
+		<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="main_container_item project js">
+			<h3 class="project_item">Responsive modal window</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/preloaders/" target="blank" class="main_container_item project css">
+			<h3 class="project_item">Preloaders</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="main_container_item project js">
+			<h3 class="project_item">WebGL Generator of Models</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/themes/responsive_ux_template/" target="blank" class="main_container_item project html">
+			<h3 class="project_item">Responsive UX template</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="main_container_item project js">
+			<h3 class="project_item">3d Panorams</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/material_table/" target="blank" class="main_container_item project css">
+			<h3 class="project_item">Material responsive table</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="main_container_item project js">
+			<h3 class="project_item">Responsive Framework</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/material_bootstrap_theme/" target="blank" class="main_container_item project css">
+			<h3 class="project_item">Material design for Bootstrap 3</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item project js">
+			<h3 class="project_item">Library of plugins</h3>
+		</a>
+		<a href="http://stas-melnikov.ru/magic_layout/" target="blank" class="main_container_item project js">
+			<h3 class="project_item">Magic Layout</h3>
+		</a>
 	</section>
 	<section id="feedback" class="wrapper_form">
 		<h2 class="title">Feedback</h2>
@@ -239,9 +212,6 @@
 			<a href="#contacts" class="additional_menu_link scroller_link">Contacts</a>
 		</li>
 		<li class="additional_menu_item">
-			<a href="doc/index.html" class="menu_link">Documentation</a>
-		</li>
-		<li class="additional_menu_item">
 			<a href="shortcodes.html" class="menu_link">Shortcodes</a>
 		</li>
 		<li class="additional_menu_item">
@@ -260,7 +230,13 @@
 			<a href="project.html" class="menu_link">Single Project</a>
 		</li>
 		<li class="additional_menu_item">
-			<a href="http://stas-melnikov.ru/3d_panorama//" target="blank" class="menu_link">3d Single Project</a>
+			<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="menu_link">3d Single Project</a>
+		</li>
+		<li class="additional_menu_item">
+			<a href="doc/index.html" class="menu_link">Documentation</a>
+		</li>
+		<li class="additional_menu_item">
+			<a href="https://github.com/melnik909/responsive-UX-theme" class="menu_link">GitHub</a>
 		</li>
 	</ul>
 </div>
