--- a/project.html
+++ b/project.html
@@ -34,6 +34,9 @@
 					<li class="menu_item">
 						<a href="doc/index.html" class="menu_link">Doc<span class="line_bottom">&nbsp;</span></a>
 					</li>
+					<li class="menu_item">
+						<a href="https://github.com/melnik909/responsive-UX-theme" class="menu_link">GitHub<span class="line_bottom">&nbsp;</span></a>
+					</li>
 					<li class="menu_item wrapper_drop_down_block">
 						<a href="#" class="menu_link">Pages</a>
 						<ul class="drop_down_block">
@@ -156,6 +159,9 @@
 		</li>
 		<li class="additional_menu_item">
 			<a href="doc/index.html" class="menu_link">Documentation</a>
+		</li>
+		<li class="additional_menu_item">
+			<a href="https://github.com/melnik909/responsive-UX-theme" class="menu_link">GitHub</a>
 		</li>
 		<li class="additional_menu_item">
 			<a href="shortcodes.html" class="menu_link">Shortcodes</a>
