--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="main_container_plugins columns3">
+	<section id="works_portfolio" class="main_container_plugins columns3">
 		<h2 class="title">Works</h2>
 		<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="main_container_item project js">
 			<h3 class="project_item">Responsive modal window</h3>
