--- a/shortcodes.html
+++ b/shortcodes.html
@@ -59,7 +59,8 @@
 </div>
 	
 	<section id="content" class="main_container columns2">
-		<h1 class="title">Shortcodes</h1>
+		<h1 class="title">Shortcodes</h1>		
+		<p class="paragraph">If you like this template, look at <a href="http://stas-melnikov.ru/responsive_elements/" class="menu_link" target="blank">Responsive Framework</a>. It has big functionality and usefulness for developers.</p>
 		<div class="main_container_item">
 			<h3 class="title_post">Tabs</h3>
 			<div class="tabs_container" id="fade_left_tabs">
@@ -227,7 +228,6 @@
 				<li class="pagination_item"><a class="item"  href="#">3</a></li>
 			</ul>
 		</div>
-		<div style="text-align: center"><a href="http://stas-melnikov.ru/responsive_elements/" class="menu_link" target="blank">Full version </a></div>
 	</section>
 <footer class="footer">
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
