--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <!--plugins css-->
 <style>
-	.project_js {background-color: #40c95d;color: #000;}
-	.project_css {background-color: #36bae2;color: #000;}
-	.project_html{background-color: #d7d93f;color: #000;}
-	.project_item {color: #fff;font-size: 18px;position: absolute;top: 50%;left: 50%;-webkit-transform: translateZ(0) translate(-50%, -50%);-ms-transform: translateZ(0) translate(-50%, -50%);transform: translateZ(0) translate(-50%, -50%);}
+	.stas_project_js {background-color: #40c95d;color: #000;}
+	.stas_project_css {background-color: #36bae2;color: #000;}
+	.stas_project_html{background-color: #d7d93f;color: #000;}
+	.stas_project_item {color: #fff;font-size: 18px;position: absolute;top: 50%;left: 50%;-webkit-transform: translateZ(0) translate(-50%, -50%);-ms-transform: translateZ(0) translate(-50%, -50%);transform: translateZ(0) translate(-50%, -50%);}
 	.main_container_plugins {margin: 0 auto;padding: 35px 20px 0;text-align: center;min-width: 100px;max-width: 1200px;}
 	.main_container_plugins  .main_container_item {width: 100px;padding: 1%;height: 250px;position: relative;display: inline-block;line-height: 25px;vertical-align: top;}
 	.main_container_plugins.columns3 .main_container_item {width: 30%;margin: 0 5px 20px;}
@@ -132,55 +132,55 @@
 	</section>
 	<section id="works_portfolio" class="main_container_plugins columns4">
 		<h2 class="title">Works</h2>
-		<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="main_container_item project project_js">
-			<h3 class="project_item">Responsive modal window</h3>
-			<span class="hashtag">jQuery</span>
-			<span class="price">7$</span>
+		<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">Responsive modal window</h3>
+			<span class="stas_project_hashtag">jQuery</span>
+			<span class="stas_project_price">7$</span>
 		</a>
-		<a href="http://stas-melnikov.ru/preloaders/" target="blank" class="main_container_item project project_css">
-			<h3 class="project_item">Preloaders</h3>
-			<span class="hashtag">CSS</span>
-			<span class="price">4$</span>
+		<a href="http://stas-melnikov.ru/preloaders/" target="blank" class="main_container_item stas_project stas_project_css">
+			<h3 class="stas_project_item">Preloaders</h3>
+			<span class="stas_project_hashtag">CSS</span>
+			<span class="stas_project_price">4$</span>
 		</a>
-		<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="main_container_item project project_js">
-			<h3 class="project_item">WebGL Generator of Models</h3>
-			<span class="hashtag">ThreeJS</span>
-			<span class="price">9$</span>
+		<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">WebGL Generator of Models</h3>
+			<span class="stas_project_hashtag">ThreeJS</span>
+			<span class="stas_project_price">9$</span>
 		</a>
-		<a href="http://stas-melnikov.ru/themes/responsive_ux_template/" target="blank" class="main_container_item project project_html">
-			<h3 class="project_item">Responsive UX template</h3>
-			<span class="hashtag">HTML5</span>
-			<span class="price">FREE</span>
+		<a href="http://stas-melnikov.ru/themes/responsive_ux_template/" target="blank" class="main_container_item stas_project stas_project_html">
+			<h3 class="stas_project_item">Responsive UX template</h3>
+			<span class="stas_project_hashtag">HTML5</span>
+			<span class="stas_project_price">FREE</span>
 		</a>
-		<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="main_container_item project project_js">
-			<h3 class="project_item">3d Panorams</h3>
-			<span class="hashtag">ThreeJS</span>
-			<span class="price">8$</span>
+		<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">3d Panorams</h3>
+			<span class="stas_project_hashtag">ThreeJS</span>
+			<span class="stas_project_price">8$</span>
 		</a>
-		<a href="http://stas-melnikov.ru/material_table/" target="blank" class="main_container_item project project_css">
-			<h3 class="project_item">Material responsive table</h3>
-			<span class="hashtag">CSS</span>
-			<span class="price">4$</span>
+		<a href="http://stas-melnikov.ru/material_table/" target="blank" class="main_container_item stas_project stas_project_css">
+			<h3 class="stas_project_item">Material responsive table</h3>
+			<span class="stas_project_hashtag">CSS</span>
+			<span class="stas_project_price">4$</span>
 		</a>
-		<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="main_container_item project project_js">
-			<h3 class="project_item">Responsive Framework</h3>
-			<span class="hashtag">PureJS</span>
-			<span class="price">9$</span>
+		<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">Responsive Framework</h3>
+			<span class="stas_project_hashtag">PureJS</span>
+			<span class="stas_project_price">9$</span>
 		</a>
-		<a href="http://stas-melnikov.ru/material_bootstrap_theme/" target="blank" class="main_container_item project project_css">
-			<h3 class="project_item">Material design for Bootstrap 3</h3>
-			<span class="hashtag">CSS</span>
-			<span class="price">FREE</span>
+		<a href="http://stas-melnikov.ru/material_bootstrap_theme/" target="blank" class="main_container_item stas_project stas_project_css">
+			<h3 class="stas_project_item">Material design for Bootstrap 3</h3>
+			<span class="stas_project_hashtag">CSS</span>
+			<span class="stas_project_price">FREE</span>
 		</a>
-		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item project project_js">
-			<h3 class="project_item">Library of plugins</h3>
-			<span class="hashtag">jQuery</span>
-			<span class="price">FREE</span>
+		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">Library of plugins</h3>
+			<span class="stas_project_hashtag">jQuery</span>
+			<span class="stas_project_price">FREE</span>
 		</a>
-		<a href="http://stas-melnikov.ru/magic_layout/" target="blank" class="main_container_item project project_js">
-			<h3 class="project_item">Magic Layout</h3>
-			<span class="hashtag">jQuery</span>
-			<span class="price">FREE</span>
+		<a href="http://stas-melnikov.ru/magic_layout/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">Magic Layout</h3>
+			<span class="stas_project_hashtag">jQuery</span>
+			<span class="stas_project_price">FREE</span>
 		</a>
 	</section>
 	<section id="feedback" class="wrapper_form">
