--- a/index.html
+++ b/index.html
@@ -132,25 +132,35 @@
 	</section>
 	<section id="works_portfolio" class="main_container_plugins columns4">
 		<h2 class="title">Works</h2>
+		<a href="http://stas-melnikov.ru/the-animated-flask-css3/" target="blank" class="main_container_item stas_project stas_project_css">
+			<h3 class="stas_project_item">The animated flask</h3>
+			<span class="stas_project_hashtag">CSS</span>
+			<span class="stas_project_price">FREE</span>
+		</a>
+		<a href="http://stas-melnikov.ru/animated_alert/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">Animated alerts</h3>
+			<span class="stas_project_hashtag">jQuery</span>
+			<span class="stas_project_price">5$</span>
+		</a>
+		<a href="http://stas-melnikov.ru/hovers/" target="blank" class="main_container_item stas_project stas_project_css">
+			<h3 class="stas_project_item">Hovers effects</h3>
+			<span class="stas_project_hashtag">CSS</span>
+			<span class="stas_project_price">8$</span>.
+		</a>
 		<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="main_container_item stas_project stas_project_js">
 			<h3 class="stas_project_item">Responsive modal window</h3>
 			<span class="stas_project_hashtag">jQuery</span>
 			<span class="stas_project_price">7$</span>
-		</a>
-		<a href="http://stas-melnikov.ru/preloaders/" target="blank" class="main_container_item stas_project stas_project_css">
-			<h3 class="stas_project_item">Preloaders</h3>
-			<span class="stas_project_hashtag">CSS</span>
-			<span class="stas_project_price">4$</span>
 		</a>
 		<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="main_container_item stas_project stas_project_js">
 			<h3 class="stas_project_item">WebGL Generator of Models</h3>
 			<span class="stas_project_hashtag">ThreeJS</span>
 			<span class="stas_project_price">9$</span>
 		</a>
-		<a href="http://stas-melnikov.ru/themes/responsive_ux_template/" target="blank" class="main_container_item stas_project stas_project_html">
-			<h3 class="stas_project_item">Responsive UX template</h3>
-			<span class="stas_project_hashtag">HTML5</span>
-			<span class="stas_project_price">FREE</span>
+		<a href="http://stas-melnikov.ru/preloaders/" target="blank" class="main_container_item stas_project stas_project_css">
+			<h3 class="stas_project_item">Preloaders</h3>
+			<span class="stas_project_hashtag">CSS</span>
+			<span class="stas_project_price">4$</span>
 		</a>
 		<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="main_container_item stas_project stas_project_js">
 			<h3 class="stas_project_item">3d Panorams</h3>
@@ -167,15 +177,30 @@
 			<span class="stas_project_hashtag">PureJS</span>
 			<span class="stas_project_price">9$</span>
 		</a>
+		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">3D model Iphone</h3>
+			<span class="stas_project_hashtag">ThreeJS</span>
+			<span class="stas_project_price">4$</span>
+		</a>
 		<a href="http://stas-melnikov.ru/material_bootstrap_theme/" target="blank" class="main_container_item stas_project stas_project_css">
 			<h3 class="stas_project_item">Material design for Bootstrap 3</h3>
 			<span class="stas_project_hashtag">CSS</span>
 			<span class="stas_project_price">FREE</span>
 		</a>
 		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">3D model Nissan</h3>
+			<span class="stas_project_hashtag">ThreeJS</span>
+			<span class="stas_project_price">4$</span>
+		</a>
+		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item stas_project stas_project_js">
 			<h3 class="stas_project_item">Library of plugins</h3>
 			<span class="stas_project_hashtag">jQuery</span>
 			<span class="stas_project_price">FREE</span>
+		</a>
+		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item stas_project stas_project_js">
+			<h3 class="stas_project_item">3D model phone: Lenovo K900 32Gb</h3>
+			<span class="stas_project_hashtag">ThreeJS</span>
+			<span class="stas_project_price">4$</span>
 		</a>
 		<a href="http://stas-melnikov.ru/magic_layout/" target="blank" class="main_container_item stas_project stas_project_js">
 			<h3 class="stas_project_item">Magic Layout</h3>
