--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			<span class="stas_project_hashtag">PureJS</span>
 			<span class="stas_project_price">9$</span>
 		</a>
-		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item stas_project stas_project_js">
+		<a href="http://stas-melnikov.ru/iphone/" target="blank" class="main_container_item stas_project stas_project_js">
 			<h3 class="stas_project_item">3D model Iphone</h3>
 			<span class="stas_project_hashtag">ThreeJS</span>
 			<span class="stas_project_price">4$</span>
@@ -187,7 +187,7 @@
 			<span class="stas_project_hashtag">CSS</span>
 			<span class="stas_project_price">FREE</span>
 		</a>
-		<a href="http://stas-melnikov.ru/library-of-plugins/" target="blank" class="main_container_item stas_project stas_project_js">
+		<a href="http://stas-melnikov.ru/car/" target="blank" class="main_container_item stas_project stas_project_js">
 			<h3 class="stas_project_item">3D model Nissan</h3>
 			<span class="stas_project_hashtag">ThreeJS</span>
 			<span class="stas_project_price">4$</span>
