--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 			<div class="posts display-ib-container_2columns">
 				<article class="article">
 					<h2 class="article__title">
-						<a href="#" class="article__readmore">Magic layout - JQuery plugin for animate blocks</a>
+						<a href="http://stas-melnikov.ru/en/magic_layout.html" target="_blank" class="article__readmore">Magic layout - JQuery plugin for animate blocks</a>
 					</h2>
-					<a href="project.html" class="hover_circle">
+					<a href="http://stas-melnikov.ru/en/magic_layout.html" target="_blank">
 						<img class="article__img" src="http://stas-melnikov.ru/cliparts/notebook3_1200x800.jpg" alt="project" /> 
 					</a>
 					<div class="article__date">
@@ -184,7 +184,7 @@
 					</div>
 				</article>
 				<article class="article display-ib-container__item">
-					<a href="project.html" class="hover_circle">
+					<a href="http://stas-melnikov.ru/library-of-plugins/" target="_blank">
 						<img class="article__img" src="http://stas-melnikov.ru/cliparts/clipart_1200x800.jpg" alt="project" /> 
 					</a>
 					<div class="article__date article__date_additional">
@@ -204,7 +204,7 @@
 						</div>
 					</div>
 					<h2 class="article__title article__title_middle">
-						<a href="#" class="article__readmore">Library-of-plugins is a collection of ready-made decisions for front-end development</a>
+						<a href="http://stas-melnikov.ru/library-of-plugins/" target="_blank" class="article__readmore">Library-of-plugins is a collection of ready-made decisions for front-end development</a>
 					</h2>
 					<div class="article__date">
 						<div class="article__day">2</div>
@@ -217,7 +217,7 @@
 					</div>
 				</article>
 				<article class="article display-ib-container__item">
-					<a href="project.html" class="hover_circle">
+					<a href="http://stas-melnikov.ru/material_bootstrap_theme/" target="_blank">
 						<img class="article__img" src="http://stas-melnikov.ru/cliparts/notebook_1200x800.jpg" alt="project" /> 
 					</a>
 					<div class="article__date article__date_additional">
@@ -235,7 +235,7 @@
 						</div>
 					</div>
 					<h2 class="article__title article__title_middle">
-						<a href="#" class="article__readmore">Material design for Bootstrap 3</a>
+						<a href="http://stas-melnikov.ru/material_bootstrap_theme/" target="_blank" class="article__readmore">Material design for Bootstrap 3</a>
 					</h2>
 					<div class="article__date">
 						<div class="article__day">15</div>
