- удалил блок с дополнительной датой - исправил список работ - добавил rem - разбил файл style.less - добавил svg иконки

--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<h1 id="responsive-ux-theme">responsive-UX-theme</h1>
+<h1 id="responsive-ux-template">Responsive UX template</h1>
 <p>Responsive UX template-is the modern and responsive html a template. It was developed by means of <a href="http://stas-melnikov.ru/responsive_elements">Responsive framework</a>. The template responds all
 the modern of the requirement. In case of creation were used next technologies were used: HTML5, CSS3. Also in it
 the responsive grid, css3 animation and many other components are included. It is prepared documentation is qualitative,
