--- a/theme/index.html
+++ b/theme/index.html
@@ -72,67 +72,67 @@
 				<a href="http://stas-melnikov.ru/the-animated-flask-css3/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">The animated flask</span>
+						<span class="project__name">The animated flask</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/animated_alert/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook5_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">Animated alerts</span>
+						<span class="project__name">Animated alerts</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/hovers/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">Hovers Effects</span>
+						<span class="project__name">Hovers Effects</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/preloaders/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">Preloaders</span>
+						<span class="project__name">Preloaders</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/webgl_generator_3dmodels/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">WebGL Generator of Models</span>
+						<span class="project__name">WebGL Generator of Models</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/3d_panorama/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook5_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">3d Panorams</span>
+						<span class="project__name">3d Panorams</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/material_table/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">Material responsive table</span>
+						<span class="project__name">Material responsive table</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/layered_responsive_modal_window/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">Responsive modal window</span>
+						<span class="project__name">Responsive modal window</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/responsive_elements/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">Responsive Framework</span>
+						<span class="project__name">Responsive Framework</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/iphone/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">3D model Iphone</span>
+						<span class="project__name">3D model Iphone</span>
 					</div>
 				</a>
 				<a href="http://stas-melnikov.ru/car/" target="blank" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="responsive-img" alt="Work" />
 					<div class="project__overlay"> 
-						<span class="project__name-project">3D model Nissan</span>
+						<span class="project__name">3D model Nissan</span>
 					</div>
 				</a>
 			</div>	
